0.1.3
Fixed 'Functions' menu sorting changes to reflect prefs immediately.
Fixed 'Functions' menu not being updated on save.
Added 'Categorised' submenus to 'Functions' menu sorting.
Added Function list sorting to prefs.

0.1.2
Redone help files.
Removed unnecessary options from prefs.
Removed 'Show BM Bar' from prefs ( now automatic ).
Carried over visibility of Bookmark Bar and Tool Bar from previous session.
Moved 'Toggle Bookmark Bar' to 'View' Menu.
Added 'Toggle Tool Bar' to 'View' menu.
Added new 'View' menu.
Fixed greying out of unusable toolbar buttons ( e.g. can't 'cut' when no page visible etc ).
Added expander to toolbar items.
Added configurable toolbar.
Fixed bug when loading session where file has weird characters in the name.

0.1.1
Fixed tool not appearing in popup if both popup options selected.
Fixed not creating new tool if ~/.KKEdit/tools folder doesn't exist.
Comments now appear as tooltips in the 'Tools' menu and the context menu.
Added optional comments to external tools.
Fixed crash when repeatedly deleting tools from the 'Manage External Tools' menu.
Added a couple of source view styles (one grey and one brown).
Added external tool to look up QT5 definition (docs must be in "/usr/share/doc/qt5" if not change the search directory in the tool),
works the same as 'Open Manpage' just select a define 'QWidget' for instance and then select 'QT5 Search' from the tools or context menu.
Compacted the prefs dialog, and grouped the functions.
Fixed bug in tools where only the first use of a place holder was being set. 
Fixed bug in external tools where %h was not being set. 

0.1.0
Fixed restoring file name with spaces ( again! )
Redone save/restore session.
Bookmarks now toggled rather than added.
Added 'Toggle Bookmark' to context menu.
Can now change bookmark highlight colour.
Added bookmark icon.
Fixed double free bug in prefs.
Toggle bookmark bar now affects all open files and is remembered in the prefs.