@@ -1,4 +1,5 @@
 0.1.3
+Changed 'Toggle' in 'View' menu to 'Show/Hide'.
 Fixed 'Functions' menu sorting changes to reflect prefs immediately.
 Fixed 'Functions' menu not being updated on save.
 Added 'Categorised' submenus to 'Functions' menu sorting.
